Add media queries

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ganesha battery house pvt. ltd.</title>
+        
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description"
               content="A battery is a device that stores chemical energy and converts it to electrical energy.
                The chemical reactions in a battery involve the flow of electrons from one material (electrode)
                 to another, through an external circuit. ">
+                <title>Ganesha battery house pvt. ltd.</title>
         <link rel="stylesheet" href="css/main.css"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     </head>
@@ -58,8 +59,8 @@
         <div class="div1">
             <h1>Services</h1>
          </div>
-         <div class="box">
-          <div class="box1">
+         <div class="block">
+          <div class="block1">
             <h3>OEM based services</h3>
            <div class="oem">
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
@@ -68,7 +69,7 @@
               alteration in some form, by injected humour.</p>
            </div>
           </div>
-          <div class="box2">
+          <div class="block2">
             <h3>Indigenous services</h3>
            <div class="indigenous">
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
@@ -97,7 +98,7 @@
          </div>
        </div>
        <footer class="footer">
-        <h3>Ganesha @ 2022</h3>
+        <p>Ganesha @ 2022</p>
        </footer>
     </body>
 </html>
