--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#products">Products</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact us</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
          </div>
         </nav> 
